work on 10mins to pandas

--- a/doc/10-minutes-to-pandas.ipynb
+++ b/doc/10-minutes-to-pandas.ipynb
@@ -4064,7 +4064,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>sum(__index_level_0__)</th>\n",
+       "      <th>sum(C)</th>\n",
+       "      <th>sum(D)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.650335</td>\n",
+       "      <td>-2.180414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2.499695</td>\n",
+       "      <td>-2.516956</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "DataFrame[A: string, sum(__index_level_0__): bigint, sum(C): double, sum(D): double]"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TODO: indexing in groups\n",
+    "df.groupby('A').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -4119,27 +4184,18 @@
        "foo  2.499695 -2.516956"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.groupby('A').sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "pdf.groupby('A').sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -4163,66 +4219,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>A</th>\n",
        "      <th>B</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>sum(__index_level_0__)</th>\n",
+       "      <th>sum(C)</th>\n",
+       "      <th>sum(D)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">bar</th>\n",
-       "      <th>one</th>\n",
-       "      <td>0.098781</td>\n",
-       "      <td>2.899457</td>\n",
+       "      <th>0</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>one</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.026285</td>\n",
+       "      <td>-0.036560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>three</th>\n",
-       "      <td>0.453792</td>\n",
-       "      <td>-1.383399</td>\n",
+       "      <th>1</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>two</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.398264</td>\n",
+       "      <td>-1.907994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>-0.744305</td>\n",
-       "      <td>0.437186</td>\n",
+       "      <th>2</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>three</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.420534</td>\n",
+       "      <td>-1.558839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">foo</th>\n",
-       "      <th>one</th>\n",
-       "      <td>0.271586</td>\n",
-       "      <td>-0.763665</td>\n",
+       "      <th>3</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>three</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.075146</td>\n",
+       "      <td>-0.572402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>three</th>\n",
-       "      <td>0.162136</td>\n",
-       "      <td>-0.806887</td>\n",
+       "      <th>4</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>two</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.241265</td>\n",
+       "      <td>0.124168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>two</th>\n",
-       "      <td>-0.934579</td>\n",
-       "      <td>0.275117</td>\n",
+       "      <th>5</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>one</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.988536</td>\n",
+       "      <td>-0.745742</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  C         D\n",
-       "A   B                        \n",
-       "bar one    0.098781  2.899457\n",
-       "    three  0.453792 -1.383399\n",
-       "    two   -0.744305  0.437186\n",
-       "foo one    0.271586 -0.763665\n",
-       "    three  0.162136 -0.806887\n",
-       "    two   -0.934579  0.275117"
+       "DataFrame[A: string, B: string, sum(__index_level_0__): bigint, sum(C): double, sum(D): double]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
