Convert Quickstart to ipynb file and add some more instructions

--- a/docs/source/getting_started/10min.ipynb
+++ b/docs/source/getting_started/10min.ipynb
@@ -6,8 +6,15 @@
    "source": [
     "# 10 minutes to Koalas\n",
     "\n",
-    "This is a short introduction to Koalas, geared mainly for new users. This notebook shows you some key differences between pandas and Koalas. You can run this examples by yourself on a live notebook [here](https://mybinder.org/v2/gh/databricks/koalas/master?filepath=docs%2Fsource%2Fgetting_started%2F10min.ipynb).\n",
+    "This is a 10 minutes introduction to Koalas, geared mainly for new users. This notebook explains basic operations and data manipulation in Koalas. You can run this examples by yourself on a live notebook [here](https://mybinder.org/v2/gh/databricks/koalas/master?filepath=docs%2Fsource%2Fgetting_started%2F10min.ipynb).\n",
     "\n",
+    "Note that if you are starting from installation, you might want to read [Quickstart](https://koalas.readthedocs.io/en/latest/getting_started/quickstart.html) first. If you are a Databricks notebook user, simply import and run [Quickstart](https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/1177812384365889/2895424737078404/4036358933921776/latest.html) to install and start. You can also import and run [this current notebook](https://raw.githubusercontent.com/databricks/koalas/master/docs/source/getting_started/10min.ipynb) in Databricks notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Customarily, we import Koalas as follows:"
    ]
   },
